--- a/css/raw/black.css
+++ b/css/raw/black.css
@@ -3978,3 +3978,6 @@ comments { box-shadow: inset 1px 0 0 rgba(0, 0, 0, 0.25); }
 .para_menu a.trigger.pilcrow { filter: grayscale(2) brightness(1.8); }
 
 .para_menu a.trigger.pilcrow:hover, .para_menu a.trigger.pilcrow.active { filter: grayscale(2) brightness(2); }
+
+
+.c-message_attachment__row--actions .c-button--outline { background: #636363; }
