--- a/css/raw/black.css
+++ b/css/raw/black.css
@@ -3980,4 +3980,85 @@ comments { box-shadow: inset 1px 0 0 rgba(0, 0, 0, 0.25); }
 .para_menu a.trigger.pilcrow:hover, .para_menu a.trigger.pilcrow.active { filter: grayscale(2) brightness(2); }
 
 
-.c-message_attachment__row--actions .c-button--outline { background: #636363; }
+/* BUTTONS */
+
+.c-button--outline { 
+  background: #121212 !important;
+	box-shadow: inset 0 0 0 1px #2c2d30;
+	color: #676767;
+	font-weight: 700;
+	box-shadow: inset 0 0 0 1px rgba(44, 45, 48, 0.22);
+  
+}
+
+.c-button--outline:hover {
+	color: #fff;
+  background: #3F3F3F !important;
+  border: none;
+  box-shadow: none;
+}
+
+.c-app_label {
+	border-radius: 2px;
+	font-size: 10px;
+	padding: 1px 3px;
+	color: #464646;
+	background-color: #161616;
+	line-height: 1.25;
+	font-weight: 700;
+	vertical-align: .125rem;
+}
+
+/* MENTIONS */
+
+
+.c-mrkdwn__subteam--link:hover, .c-member_slug--link:hover {
+	background: transparent !important;
+  text-decoration: underline;
+}
+
+.c-mrkdwn__broadcast--mention:hover {
+  background: transparent !important;
+}
+
+.c-mrkdwn__subteam--link, .c-member_slug--link{
+	background: transparent;
+  color: #FFD708 !important;
+}
+
+.c-mrkdwn__broadcast--mention {
+  background: transparent;
+  color: #FF5454 !important;
+  
+}
+
+
+/* CODE STYLE */
+
+.c-mrkdwn__pre, .c-mrkdwn__code {
+  background: #1C1C1C;
+  border-color: #171717;
+  color: #CEC19A;
+}
+
+/* FORM MESSAGE */
+
+#msg_form #msg_input {
+	background: padding-box #1C1C1C;
+	border-color: #1C1C1C;
+	border-left: 0;
+	color: #e6e6e6;
+}
+
+#primary_file_button {
+  background: #1C1C1C !important;
+	border-color: #1C1C1C  !important;
+	color: #e6e6e6  !important;
+}
+
+#primary_file_button:hover {
+	background: #222222 !important;
+	border-color: #1C1C1C  !important;
+	color: #e6e6e6  !important;
+}
+
