--- a/css/raw/black.css
+++ b/css/raw/black.css
@@ -4062,3 +4062,6 @@ comments { box-shadow: inset 1px 0 0 rgba(0, 0, 0, 0.25); }
 	color: #e6e6e6  !important;
 }
 
+#loading_welcome {
+  background: #000;
+}
