--- a/css/raw/black.css
+++ b/css/raw/black.css
@@ -4017,13 +4017,14 @@ comments { box-shadow: inset 1px 0 0 rgba(0, 0, 0, 0.25); }
   text-decoration: underline;
 }
 
-.c-mrkdwn__broadcast--mention:hover {
-  background: transparent !important;
-}
 
 .c-mrkdwn__subteam--link, .c-member_slug--link{
 	background: transparent;
-  color: #FFD708 !important;
+  color: #C9AD21 !important;
+}
+
+.c-mrkdwn__broadcast--mention:hover {
+  background: transparent !important;
 }
 
 .c-mrkdwn__broadcast--mention {
