--- a/css/raw/black.css
+++ b/css/raw/black.css
@@ -4148,6 +4148,10 @@ comments { box-shadow: inset 1px 0 0 rgba(0, 0, 0, 0.25); }
 	box-shadow: inset 1px 0 0 0 #282828;
 }
 
+.p-degraded_list__loading {
+	background-color: #282828;
+	color: #e6e6e6;
+}
 
 
 
